Mon Feb  8 23:23:48 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/ast_union.h:
        * TAO_IDL/be/be_union.cpp:
        * TAO_IDL/be/be_visitor_xplicit_pre_proc.cpp:
        * TAO_IDL/ast/ast_visitor_reifying.cpp:
        * TAO_IDL/be_include/be_union.h:
        * TAO_IDL/be_include/be_visitor_xplicit_pre_proc.h:
        
          Added support for all legal home-scope declarations
          in the generation of implied IDL for the explicit
          home interface.

Mon Feb  8 17:16:31 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_xplicit_pre_proc.cpp:
        * TAO_IDL/be_include/be_visitor_xplicit_pre_proc.h:
        
          In transfer of scope contents from IDL home to the
          implied IDL explicit interface, added support for
          typedefs. This change fixes a build problem in
          CIAO_ROOT/tests/IDL3/Lookup. Support for other
          constructs legal for declaration inside a home is
          pending.

Mon Feb  8 14:48:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/component_ch.cpp:
        * TAO_IDL/be/be_visitor_root/root.cpp:
        * TAO_IDL/be/be_visitor_traits.cpp:
          Layout changes for the generated code

Mon Feb  8 13:52:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_helper.cpp:
          Removed link to website which doesn't seem to exist anymore

Mon Feb  8 11:57:33 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/IDL_Test/IDL_Test.mpc:
          Added Bug_3821_Regression.idl to MPC.

Mon Feb  8 10:58:21 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Bug_3821_Regression/test.cpp:
        * tests/Bug_3821_Regression/test.idl:
        * tests/Bug_3821_Regression/Bug_3821_Regression.mpc:
        * tests/Bug_3821_Regression/run_test.pl:
        * tests/Bug_3821_Regression/README: