@@ -1,3 +1,9 @@
+Tue Feb  9 09:39:10 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>
+
+        * TAO_IDL/be/be_helper.cpp:
+          Fixed generation of constants for case labels in switch statement
+          for unions with char discriminator.
+
 Mon Feb  8 23:23:48 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/include/ast_union.h:
@@ -6,7 +12,7 @@ Mon Feb  8 23:23:48 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
         * TAO_IDL/ast/ast_visitor_reifying.cpp:
         * TAO_IDL/be_include/be_union.h:
         * TAO_IDL/be_include/be_visitor_xplicit_pre_proc.h:
-        
+
           Added support for all legal home-scope declarations
           in the generation of implied IDL for the explicit
           home interface.
@@ -15,7 +21,7 @@ Mon Feb  8 17:16:31 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_visitor_xplicit_pre_proc.cpp:
         * TAO_IDL/be_include/be_visitor_xplicit_pre_proc.h:
-        
+
           In transfer of scope contents from IDL home to the
           implied IDL explicit interface, added support for
           typedefs. This change fixes a build problem in
